# lucide-svg-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GUIDE.md  LICENSE-MIT  PACKAGING_GUIDE.md  README.md  SECURITY.md  TODO.md  flake.nix  release-please-config.json
.github/: RELEASE_QUICKCHECK.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  release_checklist.yml
.github/workflows/: cargo-publish.yml  ci.yml  commitlint.yml  coverage.yml  patch-badges.yml  publish-guard.yml  release-please.yml  release.yml
docs/: REPO_SETUP.md
examples/: download_all.rs  library_usage.rs  list.rs  search.rs
packaging/homebrew/: lucide-offline-cli.rb  lucide-svg-rs.rb  lucide_svg_rs.rb
packaging/scoop/: lucide-offline-cli.json  lucide-svg-rs.json
scripts/: setup-labels.sh
src/: lib.rs  main.rs
tests/: cli.rs  client.rs
