[package]
name = "lucide-svg-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "3.1", features = ["json"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
console = "0.16"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.21"

[[bin]]
name = "lucide-cli"
path = "src/bin/cli.rs"

[lib]
name = "lucide_svg_fetcher"
path = "src/lib.rs"

