[package]
name = "lucide-svg-rs"
version = "0.1.4"
edition = "2021"
description = "A Rust library and CLI tool for downloading SVG icons from the Lucide icon library with interactive selection and preview capabilities."
license = "MIT"
repository = "https://github.com/soulcorrea/lucide-svg-rs"
keywords = ["icons", "lucide", "ui", "cli"]
categories = ["web-programming", "gui"]

[dependencies]
ureq = { version = "3.1", features = ["json"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.12"
console = "0.16"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.21"

[[bin]]
name = "lucide-cli"
path = "src/bin/cli.rs"

[lib]
name = "lucide_svg_rs"
path = "src/lib.rs"
